--- a/src/stylesheets/ipodstyle.scss
+++ b/src/stylesheets/ipodstyle.scss
@@ -94,6 +94,17 @@
                 }
                 
             }
+
+            .logo-container {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100%;
+                .logo {
+                    height: 150px;
+                    border-radius: 10px;
+                }
+            }
             
         }
 
